deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: html-app
  namespace: production

spec:
  replicas: 2

  selector:
    matchLabels:
      app: html

  template:
    metadata:
      labels:
        app: html

    spec:
      containers:
        - name: html
          image: narcisser/demo-devops:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
