service.yaml
apiVersion: v1

kind: Service

metadata:

  name: html-service

  namespace: production

spec:

  selector:

    app: html

  ports:

  - port: 80

    targetPort: 80

  type: ClusterIP
