ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: html

  namespace: production

spec:

  ingressClassName: nginx

  rules:

  - host: monsite.duckdns.org

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: html-service

            port:

              number: 80
